This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix LibTom URL's in hashlib comments
Type: Stage: resolved
Components: Library (Lib) Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: christian.heimes, corona10, erlendaasland, miss-islington
Priority: normal Keywords: patch

Created on 2021-02-12 10:27 by erlendaasland, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 24507 merged erlendaasland, 2021-02-12 10:27
PR 24515 merged miss-islington, 2021-02-12 10:34
PR 24516 merged miss-islington, 2021-02-12 10:34
Messages (4)
msg386854 - (view) Author: Erlend E. Aasland (erlendaasland) * (Python triager) Date: 2021-02-12 10:27
The comments in Modules/md5module.c, Modules/sha1module.c, Modules/sha256module.c, and Modules/sha512module.c all point to http://libtom.org. However the LibTom website has in fairly recent years been relaunched at https://libtom.net. The old URL is now used by a blog called "Libations Tom" and has no connection to LibTomCrypt.
msg386855 - (view) Author: miss-islington (miss-islington) Date: 2021-02-12 10:34
New changeset 5ec7d535581bc99918e032891167a96abd224ed6 by Erlend Egeberg Aasland in branch 'master':
bpo-43204: Fix LibTomCrypt URL in md5module.c and sha*module.c comments (GH-24507)
https://github.com/python/cpython/commit/5ec7d535581bc99918e032891167a96abd224ed6
msg386857 - (view) Author: miss-islington (miss-islington) Date: 2021-02-12 11:19
New changeset df2197f2ec410817299f671e353c2fb0a3d61cbd by Miss Islington (bot) in branch '3.9':
bpo-43204: Fix LibTomCrypt URL in md5module.c and sha*module.c comments (GH-24507)
https://github.com/python/cpython/commit/df2197f2ec410817299f671e353c2fb0a3d61cbd
msg386952 - (view) Author: Dong-hee Na (corona10) * (Python committer) Date: 2021-02-14 14:53
New changeset 7777ae2ff7ba04ad20424db4efcc67246ff27b95 by Miss Islington (bot) in branch '3.8':
bpo-43204: Fix LibTomCrypt URL in md5module.c and sha*module.c comments (GH-24507) (GH-24516)
https://github.com/python/cpython/commit/7777ae2ff7ba04ad20424db4efcc67246ff27b95
History
Date User Action Args
2022-04-11 14:59:41adminsetgithub: 87370
2021-02-14 14:57:12erlendaaslandsetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2021-02-14 14:53:16corona10setnosy: + corona10
messages: + msg386952
2021-02-12 11:19:16miss-islingtonsetmessages: + msg386857
2021-02-12 10:34:56miss-islingtonsetpull_requests: + pull_request23303
2021-02-12 10:34:45miss-islingtonsetpull_requests: + pull_request23302
2021-02-12 10:34:14miss-islingtonsetnosy: + miss-islington
messages: + msg386855
2021-02-12 10:27:50erlendaaslandsetkeywords: + patch
stage: patch review
pull_requests: + pull_request23301
2021-02-12 10:27:23erlendaaslandcreate