bpo-43204: Fix LibTomCrypt URL in md5module.c and sha*module.c comments (GH-24507)

Automerge-Triggered-By: GH:tiran
(cherry picked from commit 5ec7d535581bc99918e032891167a96abd224ed6)

Co-authored-by: Erlend Egeberg Aasland <erlend.aasland@innova.no>